--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^13.3.0",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^0.27.2",
 		"jquery": "^3.6.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga": "^3.3.1",
+		"react-image-gallery": "^1.2.9",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
