--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@testing-library/user-event": "^13.5.0",
 		"axios": "^0.27.2",
 		"jquery": "^3.6.0",
+		"preval.macro": "^5.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-ga": "^3.3.1",
